// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e for 4.0b6 1`] = `
Object {
  "id": 0,
  "jsonrpc": "2.0",
  "result": Object {
    "capabilities": Object {
      "completionProvider": Object {
        "resolveProvider": true,
        "triggerCharacters": Array [
          ".",
        ],
      },
      "documentFormattingProvider": true,
      "textDocumentSync": 1,
    },
  },
}
`;

exports[`e2e for 4.0b6 2`] = `
Object {
  "jsonrpc": "2.0",
  "method": "textDocument/publishDiagnostics",
  "params": Object {
    "diagnostics": Array [
      Object {
        "message": "Syntax Error - Missing name or ; near '}'?",
        "range": Object {
          "end": Object {
            "character": 8,
            "line": 7,
          },
          "start": Object {
            "character": 7,
            "line": 7,
          },
        },
        "severity": 1,
      },
    ],
    "uri": "file:<testProjectRoot>/PdeTest.pde",
  },
}
`;

exports[`e2e for 4.0b6 3`] = `
Object {
  "jsonrpc": "2.0",
  "method": "textDocument/publishDiagnostics",
  "params": Object {
    "diagnostics": Array [
      Object {
        "message": "Syntax Error - Missing name or ; near '}'?",
        "range": Object {
          "end": Object {
            "character": 8,
            "line": 7,
          },
          "start": Object {
            "character": 7,
            "line": 7,
          },
        },
        "severity": 1,
      },
    ],
    "uri": "file:<testProjectRoot>/PdeTest.pde",
  },
}
`;

exports[`e2e for 4.0b6 4`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Array [
    Object {
      "detail": "f(int x) : void",
      "insertText": "f($1)",
      "insertTextFormat": 2,
      "kind": 2,
      "label": "f",
    },
    Object {
      "detail": "main() : void",
      "insertText": "main()",
      "insertTextFormat": 2,
      "kind": 2,
      "label": "main",
    },
    Object {
      "detail": "equals(Object) : boolean - Object",
      "insertText": "equals($1)",
      "insertTextFormat": 2,
      "kind": 3,
      "label": "equals",
    },
    Object {
      "detail": "getClass() : Class - Object",
      "insertText": "getClass()",
      "insertTextFormat": 2,
      "kind": 3,
      "label": "getClass",
    },
    Object {
      "detail": "hashCode() : int - Object",
      "insertText": "hashCode()",
      "insertTextFormat": 2,
      "kind": 3,
      "label": "hashCode",
    },
    Object {
      "detail": "notify() : void - Object",
      "insertText": "notify()",
      "insertTextFormat": 2,
      "kind": 3,
      "label": "notify",
    },
    Object {
      "detail": "notifyAll() : void - Object",
      "insertText": "notifyAll()",
      "insertTextFormat": 2,
      "kind": 3,
      "label": "notifyAll",
    },
    Object {
      "detail": "toString() : String - Object",
      "insertText": "toString()",
      "insertTextFormat": 2,
      "kind": 3,
      "label": "toString",
    },
    Object {
      "detail": "wait(long,int) : void - Object",
      "insertText": "wait($1,$2)",
      "insertTextFormat": 2,
      "kind": 3,
      "label": "wait",
    },
  ],
}
`;

exports[`e2e for 4.0b6 5`] = `
Object {
  "id": 2,
  "jsonrpc": "2.0",
  "result": Object {
    "detail": "f(int x) : void",
    "insertText": "f($1)",
    "insertTextFormat": 2,
    "kind": 2,
    "label": "f",
  },
}
`;

exports[`e2e for 4.0b6 6`] = `
Object {
  "jsonrpc": "2.0",
  "method": "textDocument/publishDiagnostics",
  "params": Object {
    "diagnostics": Array [
      Object {
        "message": "Syntax Error - Missing name or ; near '}'?",
        "range": Object {
          "end": Object {
            "character": 8,
            "line": 7,
          },
          "start": Object {
            "character": 7,
            "line": 7,
          },
        },
        "severity": 1,
      },
    ],
    "uri": "file:<testProjectRoot>/PdeTest.pde",
  },
}
`;

exports[`e2e for 4.0b6 7`] = `
Object {
  "jsonrpc": "2.0",
  "method": "textDocument/publishDiagnostics",
  "params": Object {
    "diagnostics": Array [
      Object {
        "message": "The value of the parameter x is not used",
        "range": Object {
          "end": Object {
            "character": 14,
            "line": 1,
          },
          "start": Object {
            "character": 13,
            "line": 1,
          },
        },
        "severity": 2,
      },
      Object {
        "message": "The function \\"f()\\" expects parameters like: \\"f(int)\\"",
        "range": Object {
          "end": Object {
            "character": 6,
            "line": 6,
          },
          "start": Object {
            "character": 5,
            "line": 6,
          },
        },
        "severity": 1,
      },
    ],
    "uri": "file:<testProjectRoot>/PdeTest.pde",
  },
}
`;

exports[`e2e for 4.0b6 8`] = `
Object {
  "id": 3,
  "jsonrpc": "2.0",
  "result": Array [
    Object {
      "newText": "class Hoge {
  void f(int x) {
  }
}

void main() {
  Hoge hoge = new Hoge();
  hoge.f();
}
",
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 8,
        },
        "start": Object {
          "character": 0,
          "line": 0,
        },
      },
    },
  ],
}
`;

exports[`e2e for 4.0b6 9`] = `
Object {
  "jsonrpc": "2.0",
  "method": "textDocument/publishDiagnostics",
  "params": Object {
    "diagnostics": Array [
      Object {
        "message": "The value of the parameter x is not used",
        "range": Object {
          "end": Object {
            "character": 14,
            "line": 1,
          },
          "start": Object {
            "character": 13,
            "line": 1,
          },
        },
        "severity": 2,
      },
      Object {
        "message": "The function \\"f()\\" expects parameters like: \\"f(int)\\"",
        "range": Object {
          "end": Object {
            "character": 8,
            "line": 7,
          },
          "start": Object {
            "character": 7,
            "line": 7,
          },
        },
        "severity": 1,
      },
    ],
    "uri": "file:<testProjectRoot>/PdeTest.pde",
  },
}
`;
